# ML_Quasi_2D_Emission_EQE

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/emission_photon_energy/: add_hydrogens_baseline_rfecv.yaml  add_hydrogens_tuned_rfecv.yaml  add_hydrogens_tuned_select_from_model.yaml  baseline_rfecv.yaml  tuned_rfecv.yaml  tuned_select_from_model.yaml
configs/emission_wavelength_nm/: rfecv_baseline.yaml  rfecv_tuned.yaml  select_from_model_baseline.yaml
configs/eqe_percent/: catboost_only.yaml  rfe_20_features_tuned.yaml
data/: README.md
manuscript/: FORMULAS_FOR_WORD.txt  Fig 2_RFECV.tif  Fig 3_SM.tif  MAIN_Manuscript.docx  MAIN_Manuscript.md  MAIN_Manuscript_1.docx  SUPPORTING_INFORMATION.docx  SUPPORTING_INFORMATION.md  SUPPORTING_INFORMATION_1.docx  shap_svr13_summary.csv  ~$IN_Manuscript.docx  ~$IN_Manuscript_1.docx  ~$PPORTING_INFORMATION_1.docx  ~WRL0518.tmp  ~WRL4086.tmp
notebooks/emission_photon_energy/: add_hydrogens_tuned_select_from_model.ipynb  tuned_select_from_model.ipynb
notebooks/emission_wavelength_nm/: select_from_model_baseline.ipynb
notebooks/eqe_percent/: catboost_only.ipynb  rfe_20_features_tuned.ipynb
scripts/: import_notebooks_from_rana.py  run_experiment.py
src/ml_quasit/: __init__.py  excel_dataset_loader.py  experiment_config.py  experiment_results_plots.py  iupac_to_smiles.py  rdkit_descriptor_features.py  regression_model_trainer.py  run_experiment.py  train_test_feature_selection.py
