[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-quasit-2d-perovskites"
version = "0.1.0"
description = "ML models for quasi-2D perovskite blue LED emission and EQE prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "rdkit>=2023.9.1",
  "tqdm>=4.65",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "catboost>=1.2",
  "xgboost>=2.0",
  "shap>=0.44",
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
